--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -19,14 +20,13 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["./src/components/*"],
-      "@recoil/*": ["./src/recoil/*"],
-      "@hooks/*": ["./src/hooks/*"],
-    }
+    "baseUrl": "src"
   },
   "include": [
-    "src"
+    "src",
+  ],
+  "exclude": [
+    "app-config.js",
+    "craco.config.js"
   ]
 }
