--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
