--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "@xstate/react": "^1.2.2",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "path": "^0.12.7",
